fix order manager item columns being cut on mobile

--- a/components/book/OrderManager/OrderManager.module.scss
+++ b/components/book/OrderManager/OrderManager.module.scss
@@ -1,3 +1,3 @@
 .container {
-   height: calc(100vh - 44px);
+   height: calc(100vh - 80px);
 }
